# qemt

./: .gitignore  README.md  pyproject.toml  run-experiments.yml  setup_qemt.ps1
.github/workflows/: ci.yml  publish-results.yml
docs/: method_notes.md  paper_template.tex
docs/paper/: main.tex
experiments/: 01_grover_zne.py  02_vqe_h2_opt.py  02_vqe_h2_zne.py  03_qaoa_dd.py  03_qaoa_maxcut_dd.py
qemt/: cli.py
qemt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qemt/backends/: aer_utils.py
qemt/circuits/: grover.py
qemt/metrics/: observables.py
qemt/mitigation/: cdr.py  dd.py  emm.py  zne.py
qemt/utils/: plotting.py
tests/: test_zne.py
